# tidal-spotify-sync

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: config.rs  db.rs  main.rs  sync.rs  utils.rs
src/spotify/: auth.rs  data.rs  mod.rs
src/tidal/: auth.rs  data.rs  mod.rs
