[package]
name = "tidal-spotify-sync"
version = "0.1.0"
authors = ["cikeZ00"]
edition = "2021"

[dependencies]
oauth2 = { version = "4.4", features = ["reqwest"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
log = "0.4"
env_logger = "0.11.5"
toml = "0.8.19"
serde_json = "1.0.133"
url = "2.5.4"
